--- a/src/post/components/PostCard/PostCard.css
+++ b/src/post/components/PostCard/PostCard.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 20px;
   border-radius: 10px;
+  position: relative;
 
   @media (width >= 650px) {
     flex-direction: row;
