--- a/src/post/components/PostCard/PostCard.css
+++ b/src/post/components/PostCard/PostCard.css
@@ -23,15 +23,21 @@
   }
 }
 
+.post-details {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
 .post__title {
   margin: 0;
-  margin-bottom: 10px;
   font-family: var(--custom-font);
   font-size: 2rem;
 }
 
 .post__content {
   line-height: 1.5rem;
+  margin: 0;
 }
 
 .post__content--preview {
@@ -40,6 +46,16 @@
 
   -webkit-mask: var(--mask);
   mask: var(--mask);
+}
+
+.details-link {
+  font-weight: bold;
+  text-decoration: underline;
+  align-self: flex-start;
+
+  &:hover {
+    color: rgb(0, 0, 170);
+  }
 }
 
 .post__tags-list {
